fix code css of section tablet responsive

--- a/src/styles/section/content-page.css
+++ b/src/styles/section/content-page.css
@@ -1,4 +1,4 @@
-@media (max-width: 720px) {
+/* Mobile */
   .content-page {
     display: flex;
     flex-direction: column;
@@ -38,7 +38,7 @@
     font-weight: 600;
     line-height: 26px;
   }
-}
+
 /* Tablet */
 @media (min-width: 720px) and (max-width:1023px)
 {
@@ -48,7 +48,7 @@
     margin: auto;
     width: 100%;
     height: 954px;
-    color: var(--text-white);
+    margin-top: -95px;
   }
   .content-text {
     width: 536px;
@@ -60,28 +60,7 @@
     justify-content: center;
     margin-top: 60px;
     margin-bottom: 30px;
-  }
-  .content-text .heading-title {
-    font-weight: 700;
-    font-size: var(--size-32);
-    line-height: 48px;
-    text-align: left;
-  }
-  .about-text p {
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 26px;
-    text-align: left;
-    margin-top: 3px;
-  }
-  .content-page h2 {
-    font-size: 1.6rem;
-    font-weight: 600;
-    line-height: 24px;
-  }
-  .content-page h3 {
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 26px;
+    width: 100%;
+    height: 482px;
   }
 }
