--- a/src/styles/section/footer.css
+++ b/src/styles/section/footer.css
@@ -1,6 +1,6 @@
- 
+ /* Mobile */
   footer {
-    width: 361px;
+    width: 100%;
     height: 159px;
     margin: auto;
     text-align: center;
@@ -17,14 +17,17 @@
     width: 40px;
     height: 40px;
   }
-
+  /* Tablet */
 @media (min-width: 720px) and (max-width:1023px)
 {
   footer {
-    margin-top: 0px;
-    margin-left: 180px;
+    margin: auto;
+    margin-top: -20px;
   }
   .social-icon{
-    margin-left: 50px;
+    margin-left: 40px;
+  }
+  .logos{
+    margin-left: -40px;
   }
 }
