--- a/src/styles/section/introduction.css
+++ b/src/styles/section/introduction.css
@@ -65,7 +65,7 @@
   .introduction{
     width: 100%;
     height: 800px;
-    margin-bottom: 70px;
+    margin-bottom: 110px;
   }
   .introduction__imagine{
     display: flex;
