--- a/src/styles/section/page-signup.css
+++ b/src/styles/section/page-signup.css
@@ -1,4 +1,4 @@
-@media (max-width: 720px) {
+/* Mobile */
   .page-signup {
     margin: auto;
     height: 1106px;
@@ -54,15 +54,13 @@
     font-weight: 700;
     line-height: 24px;
   }
-}
 /* Tablet */
 @media (min-width: 720px) and (max-width:1023px){
+  .page-signup {
+    height: 708px;
+    width: 710px;
+  }
   .heading-signup {
-    font-weight: 700;
-    font-size: var(--size-32);
-    line-height: 48px;
-    text-align: center;
-    color: white;
     width: 537px;
     height: 96px;
     margin: auto;
@@ -70,9 +68,14 @@
   .list-cards {
     display: flex;
     flex-wrap: wrap-reverse;
+    justify-content: center;
+    align-items: center;
   }
   .card {
-    width: 50%;
+    text-align: left;
+    margin-top: 35px;
+    margin-left: 24px;
+    margin-right: 30px;
   }
   h3 {
     font-weight: 600;
@@ -84,20 +87,8 @@
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 26px;
-    text-align: center;
+    text-align: left;
     margin-top: 13px;
-  }
-  .singup-now {
-    text-align: center;
-    margin-top: 30px;
-  }
-  .btn-signupnow {
-    width: 175px;
-    height: 53px;
-    border-radius: 10px;
-    font-size: 1.6rem;
-    font-weight: 700;
-    line-height: 24px;
   }
 }
 
